fix: fix PMD warnings